# SW-EDPN

./: .gitignore  LICENSE  README.md  config.py  debug.py  main.py  pyproject.toml  swe_pinn_simple_ansatz.py  todo.md
media-out/: Zflat_Hgauss0_Vzero.pt  Zflat_Hgauss_Vzero.pt  Zflat_Hone_Vzero.pt  Zflat_Hsine_Vzero.pt  Ztwowavebreakers_Hgauss_Vsine.pt  Zwavebreaker_Hgauss_Vsine.pt  Zwavebreaker_Hgauss_Vzero.pt  sw_pinn_ansatz_case_0_Zflat_Hsine_Vzero.pt  sw_pinn_ansatz_case_1_Zflat_Hsine_Vsine.pt  sw_pinn_ansatz_case_1_Zflat_Hsine_Vzero.pt  sw_pinn_ansatz_case_2_Zflat_Hgauss_Vzero.pt  sw_pinn_ansatz_case_3_Zflat_Hone_Vzero.pt  sw_pinn_ansatz_case_4_Zinclined_Hone_Vzero.pt  sw_pinn_ansatz_case_5_Zwavebreaker_Hgauss_Vzero.pt  swe_pinn_ansatz_case_0_flat_small_sine_height.pt
media-out/Zflat_S0gauss_V0zero/: Zflat_S0gauss_V0zero.pt
media-out/Zflat_S0one_V0zero/: Zflat_S0one_V0zero.pt
media-out/Zflat_Sgauss0_V0zero/: Zflat_Sgauss0_V0zero.pt
media-out/Zflat_Sone_V0zero/: Zflat_Sone_V0zero.pt
media-out/Zwavebreaker_S0gauss_V0zero/: Zwavebreaker_S0gauss_V0zero.pt
media-out/Zwavebreaker_Sgauss0_V0zero/: Zwavebreaker_Sgauss0_V0zero.pt
media-out/Zwavebreaker_Sgauss_V0zero/: Zwavebreaker_Sgauss_V0zero.pt
model/: __init__.py  mlp.py  sw_pinn.py  training.py
runs_swe_simple_ansatz/: swe_pinn_ansatz_case_2_flat_gaussian_bump.pt
scripts/: __init__.py  compare.py  debug_ic.py  run_fvm.py
torch/: pyvenv.cfg
utils/: __init__.py  cases.py  conservation.py  domain.py  free_surface.py  height.py  plot.py  topography.py  velocity.py
