[project]
name = "sw-pinn"
version = "0.1.0"
description = "Physics-Informed Neural Networks for 1D Shallow Water equations with wave breakers"
requires-python = ">=3.12"
dependencies = [
    "matplotlib>=3.10.9",
    "numpy>=2.4.4",
    "torch>=2.11.0",
]

[[tool.uv.index]]
name = "pytorch-cu128"
url = "https://download.pytorch.org/whl/cu128"

[tool.uv.sources]
torch = { index = "pytorch-cu128" }